--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="css/main.css" rel="stylesheet">
 	<link href="css/grid.css" rel="stylesheet">
 	<link href="css/type.css" rel="stylesheet">
+	<link href="https://file.myfontastic.com/KMGBv9SmRwmoFWodXuMoum/icons.css" rel="stylesheet">
 	<meta name="handheldfriendly" content="true">
 	<meta name="mobileoptimized" content="240">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -17,14 +18,26 @@
 		</div>
 	</div>
 	<div class="grid">
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-			<i>Define</i>
+
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island text-center">
+			<div class="btn-lightbulb">
+				<i class="icon-lightbulb icon-size" text-center></i>
+				<h2 class="text-center btn-text-color">Define</h2>
+			</div>
 		</div>
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-			<i>Define</i>
+
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island text-center">
+			<div class="btn-hammer">
+			<i class="icon-hammer icon-size"></i>
+			<h2 class="text-center btn-text-color">Create</h2>
+			</div>
 		</div>
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-			<i>Define</i>
+
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island text-center">
+			<div class="btn btn-phone">
+				<i class="icon-phone icon-size"></i>
+				<h2 class="text-center btn-text-color">Final Solution</h2>
+			</div>
 		</div>
 	</div>
 
