feat(css): h1 title and media queries

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body class="bg">
-	<div class="grid">
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
-			<h1 class="yotta text-center bold">Design Process</h1>
+	<div class="grid design-title">
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 ">
+			<h1 class="yotta text-center bold design">Design Process</h1>
 		</div>
 	</div>
 	<div class="grid">
