style(css): white space
adding white space between the title and the btn

--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
 	</div>
 	<div class="grid">
 
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island text-center">
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 text-center island">
 			<div class="btn-lightbulb">
 				<i class="icon-lightbulb icon-size" text-center></i>
-				<h2 class="text-center btn-text-color">Define</h2>
+				<h2 class="text-center btn-text-color giga">Define</h2>
 			</div>
 		</div>
 
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island text-center">
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3  text-center gutter-btn island">
 			<div class="btn-hammer">
 			<i class="icon-hammer icon-size"></i>
-			<h2 class="text-center btn-text-color">Create</h2>
+			<h2 class="text-center btn-text-color giga">Create</h2>
 			</div>
 		</div>
 
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3 island text-center">
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 text-center gutter-btn island">
 			<div class="btn btn-phone">
 				<i class="icon-phone icon-size"></i>
-				<h2 class="text-center btn-text-color">Final Solution</h2>
+				<h2 class="text-center btn-text-color giga">Solution</h2>
 			</div>
 		</div>
 	</div>
