style(css): spacing and alignment

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-ca">
+<html lang="en-ca" class="bg">
 <head>
 	<meta charset="utf-8">
 	<title>Class Exercise 1: Icon Fonts </title>
@@ -7,14 +7,16 @@
 	<link href="css/grid.css" rel="stylesheet">
 	<link href="css/type.css" rel="stylesheet">
 	<link href="https://file.myfontastic.com/KMGBv9SmRwmoFWodXuMoum/icons.css" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,700' rel='stylesheet' type='text/css'>
 	<meta name="handheldfriendly" content="true">
 	<meta name="mobileoptimized" content="240">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
-<body class="bg">
+<body>
+<div class="billboard">
 	<div class="grid design-title">
 		<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 ">
-			<h1 class="yotta text-center bold design">Design Process</h1>
+			<h1 class="yotta text-center design">Design Process</h1>
 		</div>
 	</div>
 	<div class="grid">
@@ -40,6 +42,7 @@
 			</div>
 		</div>
 	</div>
+</div>
 
 </body>
 </html>
