feat(css/html): link
added link to three btns and styled them

--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
 	</div>
 	<div class="grid">
 
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 text-center island">
+		<a href="#" class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 text-center island link">
 			<div class="btn-lightbulb">
 				<i class="icon-lightbulb icon-size" text-center></i>
 				<h2 class="text-center btn-text-color giga">Define</h2>
 			</div>
-		</div>
+		</a>
 
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3  text-center gutter-btn island">
+		<a href="#" class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3  text-center gutter-btn island link">
 			<div class="btn-hammer">
 			<i class="icon-hammer icon-size"></i>
 			<h2 class="text-center btn-text-color giga">Create</h2>
 			</div>
-		</div>
+		</a>
 
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 text-center gutter-btn island">
+		<a href="#" class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 text-center gutter-btn island link">
 			<div class="btn btn-phone">
 				<i class="icon-phone icon-size"></i>
 				<h2 class="text-center btn-text-color giga">Solution</h2>
 			</div>
-		</div>
+		</a>
 	</div>
 </div>
 
